--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angularPipe": {
+    "angular-pipe": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -72,10 +72,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "angularPipe:build:production"
+              "browserTarget": "angular-pipe:build:production"
             },
             "development": {
-              "browserTarget": "angularPipe:build:development"
+              "browserTarget": "angular-pipe:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -83,7 +83,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angularPipe:build"
+            "browserTarget": "angular-pipe:build"
           }
         },
         "test": {
@@ -116,7 +116,7 @@
       }
     }
   },
-  "defaultProject": "angularPipe",
+  "defaultProject": "angular-pipe",
   "cli": {
     "defaultCollection": "@angular-eslint/schematics"
   }
